--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,20 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="fer.digobr.kidslingo.ui.onboarding.OnboardingFragment"
-        android:label="@string/menu_gallery"
+        android:id="@+id/nav_settings"
+        android:name="fer.digobr.kidslingo.ui.settings.SettingsFragment"
+        android:label="@string/menu_settings"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="fer.digobr.kidslingo.ui.game.GameFragment"
-        android:label="@string/menu_slideshow"
+        android:id="@+id/nav_statistics"
+        android:name="fer.digobr.kidslingo.ui.statistics.StatisticsFragment"
+        android:label="Game"
+        tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_info"
+        android:name="fer.digobr.kidslingo.ui.gameinfo.GameInfoFragment"
+        android:label="Game"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
