--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,17 @@
         android:id="@+id/nav_home"
         android:name="fer.digobr.kidslingo.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_nav_game"
+            app:destination="@id/nav_game" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_game"
+        android:name="fer.digobr.kidslingo.ui.game.GameFragment"
+        android:label="@string/menu_game"
+        tools:layout="@layout/fragment_game" />
 
     <fragment
         android:id="@+id/nav_settings"
@@ -20,12 +30,12 @@
     <fragment
         android:id="@+id/nav_statistics"
         android:name="fer.digobr.kidslingo.ui.statistics.StatisticsFragment"
-        android:label="Game"
+        android:label="@string/menu_statistics"
         tools:layout="@layout/fragment_statistics" />
 
     <fragment
         android:id="@+id/nav_info"
         android:name="fer.digobr.kidslingo.ui.gameinfo.GameInfoFragment"
-        android:label="Game"
+        android:label="@string/menu_info"
         tools:layout="@layout/fragment_game_info" />
 </navigation>
